--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
-#heading {
-    color: green;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 150px;
+    height: 100px;
+}
+
+.nav-items{
+    padding: 0px 20px;
+}
+
+.nav-items > ul{
+    font-size: 23px;
+    display: flex;
+}
+
+.nav-items > ul > li{
+    list-style: none;
+    padding: 10px;
+}
+
+.res-card{
+    width: 200px;
+    padding: 5px;
+    margin : 5px;
+}
+
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.search{
+    margin: 15px;
+}
+
+.res-logo{
+    width: 100%;
+    height: 200px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
 }
