--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@
 }
 
 .res-container{
+    margin-left: 35px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -51,4 +52,26 @@
 .filter-btn{
     margin: 10px;
     cursor: pointer;
+}
+
+.shimmer-container{
+    margin-left: 35px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    margin:10px;
+    width: 200px;
+    height: 300px;
+    background-color: rgb(226, 223, 223);
+}
+
+.login{
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.filter{
+    display: flex;
 }
