Implemented an SPA and client-side rendering

--- a/index.css
+++ b/index.css
@@ -75,3 +75,13 @@
 .filter{
     display: flex;
 }
+
+.res-menu-logo{
+    height: 400px;
+    width: 400px;
+}
+
+.no-underline{
+    text-decoration: none;
+    color: black;
+}
